--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -23,6 +23,43 @@
         #paella_logo\.png {
             display: none !important;
         }
+
+        #introContainer {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            overflow: hidden;
+        }
+
+        #intro {
+            width: 100%;
+            height: 100%;
+        }
+
+        #skipContainer{
+            position: absolute;
+            bottom: 3em;
+            cursor: pointer;
+            max-width: 300px;
+            right: 1em;
+            background: rgba(80, 80, 80, 0.8);
+            font-weight: bold;
+            color: #fafafa;
+            padding: .65em;
+            font-size: 1.2em;
+            z-index: 99999;
+        }
+
+        #overlay {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 99998;
+        }
     </style>
     <script>
 
@@ -48,8 +85,33 @@
             }, 300);
 
         });
-        loadPaella('playerContainer', '{{ multimediaObject.id }}');
+        const container= document.querySelector("#playerContainer");
+        const intro = document.createElement("video");
+        const introContainer = document.createElement("div");
+        const skipContainer = document.createElement("div");
+        const overlay = document.createElement("overlay");
 
+        intro.src="https://dls2.uvigo.es/vod//1771/74650.mp4";
+        intro.id="intro";
+        intro.addEventListener('ended', onEndedVideo);
+
+        skipContainer.id = "skipContainer";
+        introContainer.id = "introContainer";
+        overlay.id = "overlay";
+        skipContainer.addEventListener("click", onEndedVideo);
+
+        skipContainer.innerHTML = '{{ "Next Up" | trans}}';
+
+        introContainer.appendChild(intro);
+        introContainer.appendChild(skipContainer);
+        introContainer.appendChild(overlay);
+        container.appendChild(introContainer);
+        intro.play();
+
+        function onEndedVideo() {
+            container.removeChild(introContainer);
+            loadPaella('playerContainer', '{{ multimediaObject.id }}');
+        }
         function setPaellaProfile(profileName) {
             $('.viewModeItemButton').removeClass('selected');
             $('.viewModeItemButton.' + profileName).addClass('selected');
