--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -2,120 +2,130 @@
 {% set hide_slidebar = true %}
 
 {% block meta %}
-  <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
-  {# THIS IS WHAT MAKES PAELLA WORK #}
-  <base href="/bundles/pumukitpaellaplayer/paella/player/">
-  {{ parent() }}
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+    {# THIS IS WHAT MAKES PAELLA WORK #}
+    <base href="/bundles/pumukitpaellaplayer/paella/player/">
+    {{ parent() }}
 
 {% endblock %}
 {% block javascripts %}
-   <script type="text/javascript" src="javascript/swfobject.js"></script>
-   <script type="text/javascript" src="javascript/base.js"></script>
-   <script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
-   <script type="text/javascript" src="javascript/jquery.js"></script>
-   <script type="text/javascript" src="javascript/lunr.min.js"></script>
-   <script type="text/javascript" src="javascript/require.js"></script>
-   <script type="text/javascript" src="javascript/paella_player.js"></script>
-   <script type="text/javascript" src="../../assets/paella_start.js"></script>
-   <script type="text/javascript" src="../../assets/datadelegates.js"></script>
-   <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascript/swfobject.js"></script>
+    <script type="text/javascript" src="javascript/base.js"></script>
+    <script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
+    <script type="text/javascript" src="javascript/jquery.js"></script>
+    <script type="text/javascript" src="javascript/lunr.min.js"></script>
+    <script type="text/javascript" src="javascript/require.js"></script>
+    <script type="text/javascript" src="javascript/paella_player.js"></script>
+    <script type="text/javascript" src="../../assets/paella_start.js"></script>
+    <script type="text/javascript" src="../../assets/datadelegates.js"></script>
+    <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
 
-{% endblock%}
+{% endblock %}
 {% block stylesheets %}
 
-  <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8">
 
-  <style>
-   {# Added while waiting for paella upstream #}
-   video {
-       background: black;
-       box-shadow: 0 0 6px #000;
-   }
+    <style>
 
-   {# Added while waiting for paella fix TTK-16366 #}
-   .captionsBar .editorButton {
-       display: none !important;
-   }
-   .captionsBar select {
-       width: 49% !important;
-   }
-
-   {# Teltek custom design #}
-   .footPrintsContainer {
-     height: 60px !important;
-   }
-
-   {# Added while waiting for paella fix TTK-16763 #}
-   .captionsPluginContainer {
-     max-width: 400px;
-     min-width: 200px;
-     width: 30vw !important;
-   }
-
-   {% if object.isMultistream() %}
-       #playerContainer_controls {
-           display:block !important;
-           opacity:1 !important;
-       }
-
-
-       #playerContainer_controls_playback_timelinePluginContainer {
-           height: 15px !important;
-           bottom: 40px !important;
-           border-top:1px solid #EAEAEA;
-       }
-
-       #buttonPlugin12, #buttonPlugin7 {
-           display:none !important;
-       }
-
-
-       .frameControlItem {
-           width:65px !important;
-       }
-
-       .frameControlContainer {
-           height:60px !important;
+        {# touch scroll #305 and TTK-16059#}
+        body {
+            touch-action: auto !important;
         }
 
-       .frameControl .navButton {
-           width:20px !important;
-           height: 20px !important;
-           top: 20px !important;
-       }
+        {# Added while waiting for paella upstream #}
+        video {
+            background: black;
+            box-shadow: 0 0 6px #000;
+        }
 
-       #buttonPlugin8_timeline {
-           height: 60px;
-           display: block !important;
-           border-top:1px solid #EAEAEA;
-           bottom:15px;
-       }
+        .buttonPlugin {
+            margin-left: 10px !important;
+        }
 
-       #playerContainer_videoContainer_container {
-           top:0 !important;
-       }
+        #playerContainer_controls_playback {
+            height: 40px !important;
+        }
 
-   {% endif %}
+        #playerContainer_controls_playback_playbackBar {
+            height: 4px !important;
+            background-color: #808080 !important;
+        }
 
-   #playerContainer_controls_playback {
-       height: 40px !important;
-   }
+        .timeControl {
+            display: none !important;
+        }
 
-   #playerContainer_controls_playback_playbackBar {
-       height: 3px !important;
-       background-color: #808080 !important;
-   }
+        .playbackBarFull {
+            height: 2px !important;
+            background-color: rgb(255, 204, 0) !important;
+            background: linear-gradient(to bottom, rgb(255, 204, 0) 0%, rgb(255, 204, 0) 100%) !important;
+        }
 
-   .playbackBarFull {
-       background-color: rgb(255, 204, 0) !important;
-       background: linear-gradient(to bottom, rgb(255, 204, 0) 0%, rgb(255, 204, 0) 100%) !important;
-   }
+        {% if object.isMultistream() %}
 
-  {# touch scroll #305 and TTK-16059#}
-  body {
-    touch-action: auto !important;
-  }
-  </style>
+            {# Added while waiting for paella fix TTK-16366 #}
+            .captionsBar .editorButton {
+                display: none !important;
+            }
+
+            .captionsBar select {
+                width: 49% !important;
+            }
+
+            {# Teltek custom design #}
+            .footPrintsContainer {
+                height: 60px !important;
+            }
+
+            {# Added while waiting for paella fix TTK-16763 #}
+            .captionsPluginContainer {
+                max-width: 400px;
+                min-width: 200px;
+                width: 30vw !important;
+            }
+
+            #playerContainer_controls {
+                display: block !important;
+                opacity: 1 !important;
+            }
+
+            #playerContainer_controls_playback_timelinePluginContainer {
+                height: 15px !important;
+                bottom: 40px !important;
+                border-top: 1px solid #EAEAEA;
+            }
+
+            .footPrints, .captionsPluginButton {
+                display: none !important;
+            }
+
+            .frameControl {
+                display: block !important;
+                bottom:15px !important;
+                height: 60px;
+                border-top: 1px solid #EAEAEA;
+            }
+
+            .frameControlItem {
+                width: 65px !important;
+            }
+
+            .frameControlContainer {
+                height: 60px !important;
+            }
+
+            .frameControl .navButton {
+                width: 20px !important;
+                height: 20px !important;
+                top: 20px !important;
+            }
+
+            #playerContainer_videoContainer_container {
+                top: 0 !important;
+            }
+
+        {% endif %}
+    </style>
 {% endblock %}
 
 {% block title %}{{ parent() }} - {{ object.title }}{% endblock %}
