--- a/Resources/public/paella/player/resources/style/style_light_small.css
+++ b/Resources/public/paella/player/resources/style/style_light_small.css
@@ -2259,6 +2259,26 @@ a.btn {
 .buttonPlugin.flexSkip_Forward_30 {
   background-position: -200% 22%;
 }
+.layout_button,
+.fullscreen_button {
+  pointer-events: all !important;
+  float: right;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  text-shadow: 0 0 8px white;
+}
+.integratedDurationButton {
+  width: 112px !important;
+  color: white !important;
+}
+.integratedDurationButton .button-text {
+  color: white !important;
+  letter-spacing: 1px !important;
+}
+.integratedDurationButton:hover {
+  background-color: transparent !important;
+}
 .buttonPlugin.playlistPlugin {
   background-position: -88.3% -85.5%;
   background-image: url(../images/paella_icons_light.png);
@@ -2289,6 +2309,102 @@ a.btn {
   font-style: italic;
   font-weight: bold;
   padding-left: 15px;
+}
+.simpleSoundButton {
+  display: block;
+  width: 100px;
+  background: transparent !important;
+}
+.range {
+  width: 70%;
+  float: right;
+}
+.range input[type=range] {
+  display: block;
+  margin: 13px 0;
+}
+/* Scrollbar - Google Chrome */
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px !important;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+/* Scrollbar selector - Google Chrome */
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7px !important;
+}
+/* Scrollbar - Firefox */
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 5px !important;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+/* Scrollbar selector - Firefox */
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  margin-top: -7px !important;
+}
+/* Scrollbar && Scrollbar selector - IE11 */
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 5px !important;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-ms-fill-lower {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  margin-top: -7px !important;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #cc0000;
+  outline: none;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #cc0000;
+  outline: none;
 }
 .buttonPlugin.arrowSlideNavidator.nextButton {
   pointer-events: all !important;
