--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -2,61 +2,128 @@
 {% set hide_slidebar = true %}
 
 {% block meta %}
-  <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
-  {# THIS IS WHAT MAKES PAELLA WORK #}
-  <base href="/bundles/pumukitpaellaplayer/paella/player/">
-  {{ parent() }}
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+    {# THIS IS WHAT MAKES PAELLA WORK #}
+    <base href="/bundles/pumukitpaellaplayer/paella/player/">
+    {{ parent() }}
 
 {% endblock %}
 {% block javascripts %}
-   <script type="text/javascript" src="javascript/swfobject.js"></script>
-   <script type="text/javascript" src="javascript/base.js"></script>
-   <script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
-   <script type="text/javascript" src="javascript/jquery.js"></script>
-   <script type="text/javascript" src="javascript/lunr.min.js"></script>
-   <script type="text/javascript" src="javascript/require.js"></script>
-   <script type="text/javascript" src="javascript/paella_player.js"></script>
-   <script type="text/javascript" src="../../assets/paella_start.js"></script>
-   <script type="text/javascript" src="../../assets/datadelegates.js"></script>
-   <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascript/swfobject.js"></script>
+    <script type="text/javascript" src="javascript/base.js"></script>
+    <script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
+    <script type="text/javascript" src="javascript/jquery.js"></script>
+    <script type="text/javascript" src="javascript/lunr.min.js"></script>
+    <script type="text/javascript" src="javascript/require.js"></script>
+    <script type="text/javascript" src="javascript/paella_player.js"></script>
+    <script type="text/javascript" src="../../assets/paella_start.js"></script>
+    <script type="text/javascript" src="../../assets/datadelegates.js"></script>
+    <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
 
-{% endblock%}
+{% endblock %}
 {% block stylesheets %}
 
-  <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8">
 
-  <style>
-   {# Added while waiting for paella upstream #}
-   video {
-       background: black;
-       box-shadow: 0px 0px 6px #000;
-   }
+    <style>
 
-   {# Added while waiting for paella fix TTK-16366 #}
-   .captionsBar .editorButton {
-       display: none !important;
-   }
-   .captionsBar select {
-       width: 49% !important;
-   }
+        {# touch scroll #305 and TTK-16059#}
+        body {
+            touch-action: auto !important;
+        }
 
-   {# Teltek custom design #}
-   .footPrintsContainer {
-     height: 60px !important;
-   }
+        {# Added while waiting for paella upstream #}
+        video {
+            background: black;
+            box-shadow: 0 0 6px #000;
+        }
 
-   {# Added while waiting for paella fix TTK-16763 #}
-   .captionsPluginContainer {
-     max-width: 400px;
-     min-width: 200px;
-     width: 30vw !important;
-   }
+        .buttonPlugin {
+            margin-left: 10px !important;
+        }
 
-  {# touch scroll #305 and TTK-16059#}
-  body {
-    touch-action: auto !important;
-  }
-  </style>
+        .playbackBarFull {
+            top: -9px !important;
+        }
+
+        .fullscreen_button {
+            position:absolute;
+            right: 35px !important;
+
+            background: none !important;
+            border: none !important;
+        }
+        .layout_button {
+            position:absolute;
+            right: 5px !important;
+
+            background: none !important;
+            border: none !important;
+        }
+        {% if multimediaObject.isMultistream() %}
+
+            {# Added while waiting for paella fix TTK-16366 #}
+            .captionsBar .editorButton {
+                display: none !important;
+            }
+
+            .captionsBar select {
+                width: 49% !important;
+            }
+
+            {# Teltek custom design #}
+            .footPrintsContainer {
+                height: 60px !important;
+            }
+
+            {# Added while waiting for paella fix TTK-16763 #}
+            .captionsPluginContainer {
+                max-width: 400px;
+                min-width: 200px;
+                width: 30vw !important;
+            }
+
+            #playerContainer_controls {
+                display: block !important;
+                opacity: 1 !important;
+            }
+
+            #playerContainer_controls_playback_timelinePluginContainer {
+                bottom: 55px !important;
+            }
+
+            .footPrints, .captionsPluginButton {
+                display: none !important;
+            }
+
+            #buttonPlugin8_timeline {
+                display: block !important;
+                bottom: 5px !important;
+                height: 60px;
+                border-top: 1px solid #EAEAEA;
+            }
+
+            .frameControlItem {
+                width: 65px !important;
+            }
+
+            .frameControlContainer {
+                height: 60px !important;
+            }
+
+            .frameControl .navButton {
+                width: 20px !important;
+                height: 20px !important;
+                top: 20px !important;
+                border: none !important;
+            }
+
+            #playerContainer_videoContainer_container {
+                top: 0 !important;
+            }
+
+        {% endif %}
+    </style>
 {% endblock %}
 
 {% block title %}{{ parent() }} - {{ object.title }}{% endblock %}
