--- a/Resources/views/PaellaPlayer/advance.css.twig
+++ b/Resources/views/PaellaPlayer/advance.css.twig
@@ -29,22 +29,23 @@
     }
 
     #playerContainer_controls_playback_timelinePluginContainer {
-        bottom: 55px !important;
+        bottom: 59px !important;
+        background-color: rgba(0, 0, 0, 0.45);
     }
 
     .footPrints, .captionsPluginButton {
         display: none !important;
     }
 
-    #playerContainer_controls_playback_timelinePluginContainer  .buttonTimeLine {
+    #playerContainer_controls_playback_timelinePluginContainer  .buttonTimeLine.frameControl {
         display: block !important;
-        bottom: 5px !important;
+        bottom: 1px !important;
         height: 60px;
         border-top: 1px solid #EAEAEA;
     }
 
     .frameControlItem {
-        width: 65px !important;
+        width: 83px !important;
     }
 
     .frameControlContainer {
