--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -76,7 +76,7 @@
             "es.teltek.paella.playlistPlugin":  {"enabled":true, "playlistApi":"/paellaplaylist"},
             "es.teltek.paella.integratedDurationPlugin": {"enabled":true},
             "es.teltek.paella.simpleSoundControlPlugin": {"enabled":true},
-            "es.teltek.paella.advanceViewModePlugin": {"enabled":true},
+            "es.teltek.paella.advanceViewModePlugin": {"enabled": {{ 'advanced' in app.request.headers.get('referer') ? 'true': 'false'}} },
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
             "es.upv.paella.extendedTabAdapterPlugin": {"enabled":false},
             "es.upv.paella.footprintsPlugin": {"enabled":true, "skin":"custom", "fillStyle": "green", "strokeStyle": "green"},
